# MyEngine

./: .gitignore  CMakeLists.txt
cmake/: cmake_mingw.bat  cmake_vs2019.bat
src/: CMakeLists.txt  main.cpp
